# smoc-schema

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
AlignmentSet/: index.html
Array/: index.html
Assay/: index.html
Boolean/: index.html
Curie/: index.html
DataEntity/: index.html
DataFormat/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Experiment/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OmicsType/: index.html
PersonStatus/: index.html
Record/: index.html
ReferenceGenome/: index.html
ReferenceSequence/: index.html
Sample/: index.html
Sparqlpath/: index.html
String/: index.html
Study/: index.html
StudyCollection/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
VariantSet/: index.html
about/: index.html
age_in_years/: index.html
birth_date/: index.html
collector/: index.html
completion_date/: index.html
data_format/: index.html
description/: index.html
entries/: index.html
examples/: README.md
format/: index.html
has_assay/: index.html
has_data/: index.html
has_experiment/: index.html
has_part/: index.html
has_record/: index.html
has_reference/: index.html
has_sample/: index.html
has_sequence/: index.html
id/: index.html
uri/: index.html
(+32 files in other folders)
